src/frontend/ast/snapshots/shlang__frontend__ast__parser_test__Empty anonymous class literal.snap
---
source: src/frontend/ast/parser_test.rs
description: "Test: Empty anonymous class literal\n──────────────────────────────────────────────────────────────────────────────────\nclass {}"
expression: parse_expr (& source)
info: test_parser_classes
---
Ok(
    Program {
        ident_pool: IdentArray {
            0: "input",
            1: "println",
            2: "str_len",
            3: "parse_str",
        },
        file_id: FileId(Anon),
    } = ClassLit {
        name: None,
        fields: {},
        methods: {},
    }[6:8],
)
