src/frontend/ast/snapshots/shlang__frontend__ast__parser_test__Empty class literal.snap
---
source: src/frontend/ast/parser_test.rs
description: "Test: Empty class literal\n──────────────────────────────────────────────────────────────────────────────────\nclass Foo {}"
expression: parse_expr (& source)
info: test_parser_classes
---
Ok(
    Program {
        ident_pool: IdentArray {
            0: "input",
            1: "println",
            2: "str_len",
            3: "parse_str",
            4: "Foo",
        },
        file_id: FileId(Anon),
    } = ClassLit {
        name: Some(
            IdentId(4)[6:9],
        ),
        fields: {},
        methods: {},
    }[10:12],
)
