src/frontend/ast/snapshots/shlang__frontend__ast__parser_test__Index with call.snap
---
source: src/frontend/ast/parser_test.rs
description: "Test: Index with call\n──────────────────────────────────────────────────────────────────────────────────\na[1]()[2]"
expression: parse_expr (& source)
info: test_parser_access
---
Ok(
    Program {
        ident_pool: IdentArray {
            0: "input",
            1: "println",
            2: "str_len",
            3: "parse_str",
            4: "a",
        },
        file_id: FileId(Anon),
    } = Index {
        target: Call {
            callee: Index {
                target: Var(IdentId(4))[0:1],
                index: Int(1)[2:3],
            }[1:4],
            args: [],
        }[5:6],
        index: Int(2)[7:8],
    }[6:9],
)
