src/frontend/ast/snapshots/shlang__frontend__ast__parser_test__Invalid usage of variable assignment.snap
---
source: src/frontend/ast/parser_test.rs
description: "Test: Invalid usage of variable assignment\n──────────────────────────────────────────────────────────────────────────────────\nvar a = b = 1;"
expression: parse_expr (& source)
info: test_parser_variables
---
Err(
    ErrorBox {
        kind: UnexpectedVoidExpression,
        span: 8:13,
        id: FileId(Anon),
    },
)
