src/frontend/ast/snapshots/shlang__frontend__ast__parser_test__Struct access with call.snap
---
source: src/frontend/ast/parser_test.rs
description: "Test: Struct access with call\n──────────────────────────────────────────────────────────────────────────────────\na.b().c"
expression: parse_expr (& source)
info: test_parser_access
---
Ok(
    Program {
        ident_pool: IdentArray {
            0: "input",
            1: "println",
            2: "str_len",
            3: "parse_str",
            4: "a",
            5: "b",
            6: "c",
        },
        file_id: FileId(Anon),
    } = FieldAccess {
        target: FieldAccess {
            target: Var(IdentId(4))[0:1],
            requested: Method {
                callee: IdentId(5),
                callee_span: 2:3,
                args: [],
                arg_span: 4:5,
            }[2:5],
        }[0:5],
        requested: Property(
            IdentId(6)[6:7],
        )[6:7],
    }[0:7],
)
