src/frontend/ast/snapshots/shlang__frontend__ast__parser_test__Struct access.snap
---
source: src/frontend/ast/parser_test.rs
description: "Test: Struct access\n──────────────────────────────────────────────────────────────────────────────────\nb.a*2"
expression: parse_expr (& source)
info: test_parser_access
---
Ok(
    Program {
        ident_pool: IdentArray {
            0: "input",
            1: "println",
            2: "str_len",
            3: "parse_str",
            4: "b",
            5: "a",
        },
        file_id: FileId(Anon),
    } = BinaryNode {
        kind: Multiply,
        left: FieldAccess {
            target: Var(IdentId(4))[0:1],
            requested: Property(
                IdentId(5)[2:3],
            )[2:3],
        }[0:3],
        right: Int(2)[4:5],
    }[0:5],
)
